--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@
   box-sizing: border-box;
 }
 
+/* ----- MENU ------------------------------------------*/
+
 .upperBar{
   position: fixed;
   top: 0;
@@ -30,6 +32,8 @@
   display: none;
 }
 
+/* ----- HEADER ------------------------------------------*/
+
 header{
   width: 100%;
   height: 100vh;
@@ -48,6 +52,8 @@ header h1{
   margin-bottom: 30px;
 }
 
+/* ----- SECTION 1 ------------------------------------------*/
+
 .s1{
   width: 100%;
   height: 800px;
@@ -61,6 +67,8 @@ header h1{
   height: 600px;
   background: #fff;
 }
+
+/* ----- SECTION 2 ------------------------------------------*/
 
 .s2{
   width: 100%;
@@ -97,6 +105,8 @@ header h1{
   margin-bottom: 20px;
 }
 
+/* ----- SECTION 3 ------------------------------------------*/
+
 .s3{
   width: 100%;
   height: 800px;
@@ -110,6 +120,8 @@ header h1{
   height: 600px;
   background: #fff;
 }
+
+/* ----- SECTION 4 ------------------------------------------*/
 
 .s4{
   width: 100%;
@@ -161,19 +173,69 @@ header h1{
   grid-row: 3;
 }
 
+/* ----- SECTION 5 ------------------------------------------*/
+
 .s5{
   width: 100%;
-  height: 800px;
+  height: 1200px;
   background: #1f1f1f;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  display: grid;
+  grid-template-columns: 1fr repeat(3, 300px) 1fr;
+  grid-template-rows: repeat(3, 1fr) 500px;
 }
-.s5>div{
-  width: 800px;
-  height: 600px;
+.s5 h2{
+  grid-column: 2/5;
+  grid-row: 1;
   color: #fff;
+  padding: 50px;
 }
+.s5 form{
+  grid-column: 2/4;
+  grid-row: 2/4;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 100px 200px 100px;
+  grid-gap: 20px;
+}
+.s5 .name{
+  grid-column: 1;
+  grid-row: 1;
+  height: 30px;
+  align-self: end;
+  padding-left: 10px;
+}
+.s5 .email{
+  grid-column: 2;
+  grid-row: 1;
+  height: 30px;
+  align-self: end;
+  padding-left: 10px;
+}
+.s5 .textarea{
+  grid-column: 1/3;
+  grid-row: 2;
+  padding: 10px;
+}
+.s5 .button{
+  grid-column: 1;
+  grid-row: 3;
+  width: 200px;
+  height: 50px;
+}
+.s5 .aside{
+  grid-column: 4;
+  grid-row: 2/4;
+  color: #fff;
+  padding: 50px;
+}
+.s5 .map{
+  grid-column: 2/5;
+  grid-row: 4;
+  height: 450px;
+  background: #fff;
+}
+
+/* ----- FOOTER ------------------------------------------*/
 
 footer{
   height: 50px;
