--- a/style.css
+++ b/style.css
@@ -37,19 +37,22 @@
 nav{
   position: fixed;
   width: 100%;
-  height: 500px;
+  height: 300px;
   top: 80px;
   left: 0;
-  padding-top: 80px;
+  padding: 30px;
   background: #fff;
-  color: #000;
   font-size: 40px;
   display: flex;
   justify-content: flex-end;
   z-index: 90;
 }
-nav>ul{
+nav ul{
   list-style-type: none;
+}
+nav a{
+  text-decoration: none;
+  color: #000;
 }
 
 /* ----- HEADER ------------------------------------------*/
