--- a/style.css
+++ b/style.css
@@ -89,15 +89,47 @@ header h1{
 .s1{
   width: 100%;
   height: 800px;
-  background: #1f1f1f;
   display: flex;
   justify-content: center;
   align-items: center;
+  background: #1f1f1f;
+  overflow: hidden;
 }
-.s1>div{
+.s1 .window{
+  position: absolute;
+  width: inherit;
+  height: inherit;
+  z-index: 10;
+  display: grid;
+  grid-template-columns: 1fr 800px 1fr;
+}
+.s1 .windowL{
+  background: #1f1f1f;
+  grid-column: 1;
+}
+.s1 .windowR{
+  background: #1f1f1f;
+  grid-column: 3;
+}
+.s1 .slider{
+  position: relative;
+  display: flex;
+}
+.s1 .el{
   width: 800px;
   height: 600px;
-  background: #f7f7f7;
+  position: relative;
+  left: 400px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 60px;
+}
+.el1, .el3, .el5, .el7{
+  background: white;
+}
+.el2, .el4, .el6, .el8{
+  background: gray;
 }
 
 /* ----- SECTION 2 ------------------------------------------*/
@@ -108,6 +140,7 @@ header h1{
   display: grid;
   grid-template-columns: 1fr 400px 400px 1fr;
   grid-template-rows: 360px;
+  background: #f7f7f7;
   grid-gap: 20px;
   padding-top: 60px;
 }
