--- a/style.css
+++ b/style.css
@@ -25,15 +25,23 @@ body{
 .upperBar.active{
   background: var(--lightBG);
 }
-.upperBar .logo{
+.logo{
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
   width: 130px;
   background: var(--lightBG);
 }
-.upperBar img{
+.logo img{
   width: 130px;
 }
 
 .menuBtn{
+  position: fixed;
+  top: 0;
+  right: 0;
+  z-index: 100;
   width: 30px;
   height: 30px;
   margin: 10px 25px 0 0;
@@ -352,7 +360,11 @@ header h1{
   grid-column: 2/5;
   grid-row: 1;
   color: #fff;
-  padding: 50px;
+  font-size: 60px;
+  letter-spacing: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .s5 form{
   grid-column: 2/4;
@@ -405,6 +417,9 @@ header h1{
   cursor: pointer;
   color: #fff;
 }
+.s5 .socials i:hover{
+  text-shadow: 1px 1px 2px white, -1px -1px 2px white;
+}
 .s5 .map{
   grid-column: 2/5;
   grid-row: 4;
@@ -415,7 +430,7 @@ header h1{
 /* ----- FOOTER ------------------------------------------*/
 
 footer{
-  height: 50px;
+  height: 60px;
   text-align: center;
   font-size: 20px;
   padding: 20px;
