--- a/style.css
+++ b/style.css
@@ -10,6 +10,8 @@ body{
   font-family: "Roboto";
 }
 
+
+
 /* ----- MENU ------------------------------------------*/
 
 .upperBar{
@@ -171,6 +173,17 @@ nav.deactive{
   100%{ z-index: -1; }
 }
 
+@media screen and (max-width: 600px){
+  .logo{
+    width: 80px;
+  }
+  .logo img{
+    width: 80px;
+  }
+}
+
+
+
 /* ----- HEADER ------------------------------------------*/
 
 header{
@@ -240,6 +253,20 @@ header h1{
   transform: rotateX(-90deg) translateZ(150px);
 }
 
+@media screen and (max-width: 600px){
+  header>div{
+    transform: scale(0.8);
+  }
+}
+
+@media screen and (max-width: 400px){
+  header>div{
+    transform: scale(0.6);
+  }
+}
+
+
+
 /* ----- SECTION 1 ------------------------------------------*/
 
 .s1{
@@ -290,14 +317,61 @@ header h1{
   background: gray;
 }
 
+@media screen and (max-width: 840px){
+  .s1{
+    height: 650px;
+  }
+  .s1 .window{
+    grid-template-columns: 1fr 600px 1fr;
+  }
+  .s1 .el{
+    width: 600px;
+    height: 450px;
+    left: 300px;
+    font-size: 40px;
+  }
+}
+
+@media screen and (max-width: 640px){
+  .s1{
+    height: 400px;
+  }
+  .s1 .window{
+    grid-template-columns: 1fr 400px 1fr;
+  }
+  .s1 .el{
+    width: 400px;
+    height: 300px;
+    left: 200px;
+    font-size: 30px;
+  }
+}
+
+@media screen and (max-width: 440px){
+  .s1{
+    height: 400px;
+  }
+  .s1 .window{
+    grid-template-columns: 1fr 300px 1fr;
+  }
+  .s1 .el{
+    width: 300px;
+    height: 300px;
+    left: 150px;
+    font-size: 30px;
+  }
+}
+
+
+
 /* ----- SECTION 2 ------------------------------------------*/
 
 .s2{
   width: 100%;
-  height: 800px;
+  height: 760px;
   display: grid;
   grid-template-columns: 1fr 400px 400px 1fr;
-  grid-template-rows: 360px;
+  grid-template-rows: 320px;
   background: var(--lightBG);
   grid-gap: 20px;
   padding-top: 60px;
@@ -328,6 +402,50 @@ header h1{
   margin-bottom: 20px;
 }
 
+@media screen and (max-width: 900px){
+  .s2{
+    height: 1150px;
+    grid-template-columns: 1fr 600px 1fr;
+    grid-template-rows: 240px;
+    padding-bottom: 50px;
+  }
+  .s2-elem{
+    width: 600px;
+    height: 220px;
+  }
+  .s2-e1{
+    grid-column: 2;
+    grid-row: 1;
+  }
+  .s2-e2{
+    grid-column: 2;
+    grid-row: 2;
+  }
+  .s2-e3{
+    grid-column: 2;
+    grid-row: 3;
+  }
+  .s2-e4{
+    grid-column: 2;
+    grid-row: 4;
+  }
+}
+
+@media screen and (max-width: 650px){
+  .s2{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    padding: 50px 20px;
+  }
+  .s2-elem{
+    width: 100%;
+  }
+}
+
+
+
 /* ----- SECTION 3 ------------------------------------------*/
 
 .s3{
@@ -345,11 +463,24 @@ header h1{
 .s3 img{
   width: 800px;
 }
-.s3 .s3-image{
+.s3-image{
   margin-top: 50px;
   color: #fff;
   text-align: center;
 }
+
+@media screen and (max-width: 900px){
+  .s3>div{
+    width: 100%;
+    padding: 0 10px 0 10px;
+  }
+  .s3 img{
+    width: 100%;
+  }
+
+}
+
+
 
 /* ----- SECTION 4 ------------------------------------------*/
 
@@ -404,6 +535,96 @@ header h1{
   grid-row: 3;
 }
 
+@media screen and (max-width: 1020px){
+  .s4{
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: repeat(4, 1fr);
+  }
+  .s4-header{
+    grid-column: 1/4;
+    grid-row: 1;
+  }
+  .s4-e1{
+    grid-column: 1;
+    grid-row: 2;
+  }
+  .s4-e2{
+    grid-column: 2;
+    grid-row: 2;
+  }
+  .s4-e3{
+    grid-column: 3;
+    grid-row: 2;
+  }
+  .s4-e4{
+    grid-column: 1;
+    grid-row: 3;
+  }
+  .s4-e5{
+    grid-column: 2;
+    grid-row: 3;
+  }
+  .s4-e6{
+    grid-column: 3;
+    grid-row: 3;
+  }
+  .s4-e7{
+    grid-column: 1;
+    grid-row: 4;
+  }
+  .s4-e8{
+    grid-column: 2;
+    grid-row: 4;
+  }
+}
+
+@media screen and (max-width: 800px){
+  .s4{
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(5, 1fr);
+  }
+  .s4-header{
+    grid-column: 1/3;
+    grid-row: 1;
+    padding: 0 30px 0 30px;
+    text-align: center;
+  }
+  .s4-e1{
+    grid-column: 1;
+    grid-row: 2;
+  }
+  .s4-e2{
+    grid-column: 2;
+    grid-row: 2;
+  }
+  .s4-e3{
+    grid-column: 1;
+    grid-row: 3;
+  }
+  .s4-e4{
+    grid-column: 2;
+    grid-row: 3;
+  }
+  .s4-e5{
+    grid-column: 1;
+    grid-row: 4;
+  }
+  .s4-e6{
+    grid-column: 2;
+    grid-row: 4;
+  }
+  .s4-e7{
+    grid-column: 1;
+    grid-row: 5;
+  }
+  .s4-e8{
+    grid-column: 2;
+    grid-row: 5;
+  }
+}
+
+
+
 /* ----- SECTION 5 ------------------------------------------*/
 
 .s5{
@@ -428,7 +649,7 @@ header h1{
   grid-column: 2/4;
   grid-row: 2/4;
   display: grid;
-  grid-template-columns: 50% 50%;
+  grid-template-columns: 290px 290px;
   grid-template-rows: 100px 200px 100px;
   grid-gap: 20px;
 }
@@ -468,14 +689,19 @@ header h1{
   grid-column: 4;
   grid-row: 2/4;
   color: #fff;
-  padding: 50px;
+  padding: 20px;
+  text-align: center;
+}
+.s5 .aside-email{
+  display: block;
+  margin-top: 40px;
 }
 .s5 .socials{
   font-size: 50px;
-  width: 300px;
+  width: 210px;
   display: flex;
   flex-wrap: wrap;
-  margin-top: 40px;
+  margin: 40px auto;
 }
 .s5 .socials i{
   margin: 30px;
@@ -492,6 +718,50 @@ header h1{
   background: #fff;
 }
 
+@media screen and (max-width: 940px){
+  .s5{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+  }
+  .s5 .aside{
+    width: 100%;
+    padding: 20px 50px;
+  }
+  .s5 .socials{
+    width: 100%;
+    justify-content: space-between;
+  }
+  .s5 .socials i{
+    margin: 20px 5px;
+  }
+  .s5 .map{
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 650px){
+  .s5 form{
+    grid-template-columns: 1fr 1fr;
+    padding: 0 10px;
+  }
+}
+
+@media screen and (max-width: 450px){
+  .s5 .aside{
+    padding: 20px;
+  }
+}
+
+@media screen and (max-width: 400px){
+  .s5 .button{
+    width: 120px;
+  }
+}
+
+
+
 /* ----- FOOTER ------------------------------------------*/
 
 footer{
@@ -499,4 +769,10 @@ footer{
   text-align: center;
   font-size: 20px;
   padding: 20px;
+}
+
+@media screen and (max-width: 450px){
+  footer{
+    font-size: 16px;
+  }
 }
