--- a/style.css
+++ b/style.css
@@ -677,6 +677,14 @@ header h1{
   grid-row: 3;
   width: 200px;
   height: 50px;
+  font-size: 20px;
+  color: #fff;
+  background: var(--darkBG);
+  border: 2px solid #fff;
+  cursor: pointer;
+}
+.s5 .button:hover{
+  box-shadow: 1px 1px 10px 2px white, -1px -1px 10px 2px white;
 }
 .s5 .form-error{
   grid-column: 2;
